tests/ui/issues/issue-51022.rs
<<<PULL-UPSTREAM>>> file deleted upstream; move the Ferrocene annotations if any, and delete this file
fn main<'a>() { }
    //~^ ERROR `main` function is not allowed to have generic parameters [E0131]

// ferrocene-annotations: fls_8jb3sjqamdpu
// Program Entry Point
